# weather-alert

./: LICENSE  README.md  pyproject.toml
weather_alert/: main.py
