[project]
name = "weather-alerts"
version = "0.1.0"
description = "Terminal weather alerts for UK and USA"
authors = [{ name = "Your Name" }]
dependencies = ["requests", "rich"]
requires-python = ">=3.8"

[project.scripts]
weather-alerts = "weather_alert.main:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
